added header to html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <title>Weather Dashboard</title>
 </head>
 <body>
+    <div class="bg-dark pt-2 pb-2">
+        <div> class="container">
+            <h1 class="text-center text-white">Weather Dashboard</h1>
+        </div>
+    </div>
     <div class="input-group mb-3">
         <input id="input" type="text" class="form-control" placeholder="Enter City" aria-label="Enter City" aria-describedby="searchCity">
         <span class="input-group-text" id="searchCity">Search</span>
