--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <span class="input-group-text" id="searchCity">Search</span>
     </div>
     <div id="currentInfo"></div>
+    <script src="jquery-3.5.1.min.js"></script>
     <script src="Assets/script.js"></script>
 </body>
 </html>
