Created container around search bar

--- a/index.html
+++ b/index.html
@@ -14,9 +14,14 @@
             <h1 class="text-center text-white">Weather Dashboard</h1>
         </div>
     </div>
-    <div class="input-group mb-3">
-        <input id="input" type="text" class="form-control" placeholder="Enter City" aria-label="Enter City" aria-describedby="searchCity">
-        <span class="input-group-text" id="searchCity">Search</span>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-lg-3 bg-light pt-3 pb-3"> 
+                <div class="input-group mb-3">
+                    <input id="input" type="text" class="form-control" placeholder="Enter City" aria-label="Enter City" aria-describedby="searchCity">
+                    <span class="input-group-text" id="searchCity">Search</span>
+                </div>
+        </div>
     </div>
     <div id="currentInfo"></div>
     <script src="jquery-3.5.1.min.js"></script>
