--- a/index.html
+++ b/index.html
@@ -21,7 +21,15 @@
                     <input id="input" type="text" class="form-control" placeholder="Enter City" aria-label="Enter City" aria-describedby="searchCity">
                     <span class="input-group-text" id="searchCity">Search</span>
                 </div>
+                <div class="card"> 
+                    <ul class="list-group list-group-flush list"></ul>
+                </div> 
         </div>
+        <div class="col-lg-9"> 
+            <div id="currentCity" class="mt-4">
+                
+            </div>
+        </div> 
     </div>
     <div id="currentInfo"></div>
     <script src="jquery-3.5.1.min.js"></script>
