--- a/index.html
+++ b/index.html
@@ -29,9 +29,14 @@
             <div id="currentCity" class="mt-4">
                 
             </div>
-        </div> 
+        </div>
+        <div id="currentInfo"></div>
+        <div class="mt-4 col-md-12">
+            <h5 id="forecastH5" class="mt-3 hide">5-Day Forecast:</h5>
+            <div id="forecast" class="row"></div>
+        </div>
     </div>
-    <div id="currentInfo"></div>
+    
     <script src="jquery-3.5.1.min.js"></script>
     <script src="Assets/script.js"></script>
 </body>
