--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link href="/Assets/style.css" rel="stylesheet">
     <title>Weather Dashboard</title>
 </head>
+
 <body>
     <div class="bg-dark pt-2 pb-2">
         <div> class="container">
@@ -16,28 +19,30 @@
     </div>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-lg-3 bg-light pt-3 pb-3"> 
+            <div class="col-lg-3 bg-light pt-3 pb-3">
                 <div class="input-group mb-3">
-                    <input id="input" type="text" class="form-control" placeholder="Enter City" aria-label="Enter City" aria-describedby="searchCity">
+                    <input id="input" type="text" class="form-control" placeholder="Enter City" aria-label="Enter City"
+                        aria-describedby="searchCity">
                     <span class="input-group-text" id="searchCity">Search</span>
                 </div>
-                <div class="card"> 
+                <div class="card">
                     <ul class="list-group list-group-flush list"></ul>
-                </div> 
-        </div>
-        <div class="col-lg-9"> 
-            <div id="currentCity" class="mt-4">
-                
+                </div>
+            </div>
+            <div class="col-lg-9">
+                <div id="currentCity" class="mt-4">
+
+                </div>
+            </div>
+            <div id="currentInfo"></div>
+            <div class="mt-4 col-md-12">
+                <h5 id="forecastH5" class="mt-3 hide">5-Day Forecast:</h5>
+                <div id="forecast" class="row"></div>
             </div>
         </div>
-        <div id="currentInfo"></div>
-        <div class="mt-4 col-md-12">
-            <h5 id="forecastH5" class="mt-3 hide">5-Day Forecast:</h5>
-            <div id="forecast" class="row"></div>
-        </div>
-    </div>
-    
-    <script src="jquery-3.5.1.min.js"></script>
-    <script src="Assets/script.js"></script>
+
+        <script src="jquery-3.5.1.min.js"></script>
+        <script src="Assets/script.js"></script>
 </body>
+
 </html>
