added rows for current weather container

--- a/index.html
+++ b/index.html
@@ -30,8 +30,20 @@
                 </div>
             </div>
             <div class="col-lg-9">
-                <div id="currentCity" class="mt-4">
-
+                <div id="currentCity" class="row">
+                    <p id=cityName></p>
+                </div>
+                <div class="row">
+                    <p id=temp></p>
+                </div>
+                <div class="row">
+                    <p id=humidity></p>
+                </div>
+                <div class="row">
+                    <p id=windSpeed></p>
+                </div>
+                <div class="row">
+                    <p id=uvIndex></p>
                 </div>
             </div>
             <div id="currentInfo"></div>
