--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </div>
         </div>
 
-        <!--<script src="jquery-3.5.1.min.js"></script>-->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="Assets/script.js"></script>
 </body>
 
