--- a/index.html
+++ b/index.html
@@ -46,9 +46,10 @@
                     <p id=uvIndex></p>
                 </div>
             </div>
-            <div id="currentInfo"></div>
+        </div>
+        <div class="row">
             <div class="mt-4 col-md-12">
-                <h5 id="forecastH5" class="mt-3 hide">5-Day Forecast:</h5>
+                <h5 id="forecastH5" class="mt-3">5-Day Forecast:</h5>
                 <div id="forecast" class="row"></div>
             </div>
         </div>
